welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(y:Color) {if (estSurBiscuit()){prendBiscuit();return{}};if (isFacingTrail(y)) {baisseBrosse();leveBrosse();avance();hunt()}; else {left();hunt()}
    // Write your code here
}


var result=false
def isFacingTrail(c:Color):Boolean = {if (!estFaceMur()) {avance(); result=(getCouleurSol()==c); recule(); return result }
  else {return false}}